<resources>
    <string name="app_name">一块钱</string>
    <string name="app_buildTime" translatable="false">2025.06.09–22:20</string>
    <string name="login_to_tongji_university">统一身份认证登录</string>
    <string name="version">版本</string>
    <string name="check_for_update">检查更新</string>
    <string name="get_source_code">获取源码</string>
    <string name="about">关于</string>
    <string name="compile">编译</string>
    <string name="Time">时间</string>
    <string name="directed_by_the_informatization_office_of_tongji_university">在信息化办公室指导下研发完成</string>
    <string name="my_grades">我的成绩</string>
    <string name="single_day_curriculums">单日课表</string>
    <string name="term_curriculums">学期课表</string>
    <string name="cet">四六级</string>
    <string name="Gym_activities">场馆锻炼</string>
    <string name="Running">健身跑步</string>
    <string name="licensed_under_Mulan_Permissive_Software_License_Version_2">以木兰宽松许可证第2版开源</string>
    <string name="join_qq_group">加入QQ讨论群</string>
    <string name="qq_group_qrcode">QQ讨论群二维码</string>
    <string name="join_qq_group_by_URL">链接加群</string>
    <string name="OK">好</string>
</resources>
