<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@android:color/transparent">

    <!-- 1. 标题 -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_qq_group"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true"/>

        <!-- 2. 二维码 -->
    <ImageView
        android:id="@+id/iv_qq_group_qrcode"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/qq_group_qrcode"
        android:scaleType="centerInside"
        android:contentDescription="@string/qq_group_qrcode"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_title"/>

        <!-- 3. 按钮区域（用一个 LinearLayout 包起来，方便水平排列） -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_qq_group_qrcode"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/OK"
            android:textSize="23sp"
            android:minWidth="80dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="#70FFFFFF"/>

        <Button
            android:id="@+id/btn_join_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/join_qq_group_by_URL"
            android:textSize="23sp"
            android:minWidth="80dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="#70FFFFFF"/>

    </LinearLayout>

</RelativeLayout>