<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.About">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:id="@+id/about.linearContainer" >

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="4sp"
            android:elevation="4sp"
            android:id="@+id/about.appLogo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:layout_marginTop="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VersionInfo"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:id="@+id/about.versionInfo"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/about.linearContainer"
        android:layout_marginTop="18dp"
        android:text="@string/directed_by_the_informatization_office_of_tongji_university"
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/about.moreText"/>

    <Button
        android:id="@+id/about.button.checkUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about.moreText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="18dp"
        android:text="@string/check_for_update"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/about.button.checkUpdate"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/get_source_code"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:id="@+id/about.button.viewSource" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Based on Tongji Open Platform APIs\nDeveloped by GTY"
        android:textSize="12sp" />

</RelativeLayout>
